# tab_benchmark

./: .gitignore  LICENSE  README.md  clean_orphan_artifactories.py  environment.yml  generate_stubs.ipynb  package-list.txt  pyproject.toml  requirements.txt
analyze_runs/: analyze_runs_classification_sql.ipynb  analyze_runs_regression_sql.ipynb
examples/: demo_tab_benchmark.ipynb  sklearn_x_tabular_benchmar.ipynb  sklearn_x_tabular_benchmark_classif.ipynb
run_scripts/: analyze_runs_classification_sql.ipynb  analyze_runs_regression_sql.ipynb  clean_orphan_artifactories.py  generate_db_script.py  generate_experiment_scripts.py  generate_scripts.py  get_tasks_ids.py  run_hpo_template.sh  run_template.sh
tab_benchmark/: TransformedTargetClassifier.py  analyze.py  datasets.py  models.py  models.pyi  openml_tasks.csv  preprocess.py  utils.py
tab_benchmark/benchmark/: base_experiment.py  benchmarked_models.py  hpo_experiment.py  tabular_experiment.py  utils.py
tab_benchmark/dnns/: datasets.py
tab_benchmark/dnns/architectures/: __init__.py  base_architecture.py  mlp.py  node.py  resnet.py  ridge_sparse_gd.py  saint.py  tabnet.py  tabtransformer.py  transformer.py  utils.py
tab_benchmark/dnns/callbacks/: __init__.py  default_log.py  delete_checkpoints.py  early_stopping_enhanced.py  evaluate_metric.py  load_best_model.py  lr_finder.py  model_checkpoint_enhanced.py  one_cycle_lr.py  plot_loss.py  report_to_optuna.py  timer.py
tab_benchmark/dnns/loggers/: mlflow_logger.py
tab_benchmark/dnns/lr_schedulers/: __init__.py  reduce_lr_on_plateau_enhanced.py
tab_benchmark/dnns/modules/: __init__.py  linear_regression_module.py  ridge_gd_module.py  tabnet_module.py  tabular_module.py
tab_benchmark/dnns/tunner/: lr_finder.py
tab_benchmark/models/: base_models.py  catboost.py  dnn_model.py  dnn_models.py  factories.py  lightgbm.py  mixins.py  sk_lean_extension.py  sk_learn_models.py  xgboost.py
tests/: test_catboost.py  test_extends.py  test_lightgbm.py  test_mlp.py  test_random_forest.py  test_resnet.py  test_saint.py  test_tabnet.py  test_tabtransformer.py  test_transformer.py  test_xgboost.py  utils.py
